feat: migrate to Clerk Auth, drop venv, and update documentation

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# Database (Supabase PostgreSQL -- replace with your connection string)
+# Database (Supabase PostgreSQL -- replace with your connection string, or use SQLite)
 DATABASE_URL=sqlite:///./hackplate.db
 
-# JWT Auth
-JWT_SECRET=your_super_secret_jwt_key
+# Auth (Clerk)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
+CLERK_SECRET_KEY=sk_test_...
 
 # Telegram
 TELEGRAM_BOT_TOKEN=your_bot_token_here
