chore(db): add pg8000 driver for safe windows supabase persistence

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Database (Supabase PostgreSQL -- replace with your connection string, or use SQLite)
-DATABASE_URL=sqlite:///./hackplate.db
+# Database (Supabase PostgreSQL -- use postgresql+pg8000:// prefix for safe Windows execution)
+DATABASE_URL=postgresql+pg8000://postgres.[project-ref]:[password]...
 
 # Auth (Clerk)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
