feat(saas): Phase 4 - Full Persistence Layer integration with Clerk & Favorites

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=sqlite:///./hackplate.db
+DATABASE_URL=postgresql+pg8000://postgres.gairmjymfdkicixjdggy:Smashlikesto27@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres
 
 # Auth (Clerk)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dW5pZmllZC1tYXJtb3QtNTQuY2xlcmsuYWNjb3VudHMuZGV2JA
