--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ CLERK_SECRET_KEY=sk_test_0OHLj7Wb1DsUuGWVF1pZwBHxDsa4eCVFbB6mya7kHs
 # Telegram
 TELEGRAM_BOT_TOKEN=8516233382:AAGDm2CnJsx_mWkk5ImFajvOSbws7S3OOzI
 TELEGRAM_CHAT_ID=-4718420042
+
+# Email (SMTP) — for Gmail: use smtp.gmail.com with an App Password
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
