fix: telegram HTML parse mode, only notify on new events, fix SMTP typo

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ TELEGRAM_BOT_TOKEN=8516233382:AAGDm2CnJsx_mWkk5ImFajvOSbws7S3OOzI
 TELEGRAM_CHAT_ID=-4718420042
 
 # Email (SMTP) — for Gmail: use smtp.gmail.com with an App Password
-SMTP_HOST=
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=
-SMTP_PASSWORD=
-SMTP_FROM=
+SMTP_USER=ansariarmash007@gmail.com
+SMTP_PASSWORD=wkjjtybbwvqyhfia
+SMTP_FROM=ansariarmash007@gmail.com
